# node_agent

./: .gitignore  README.md  admin_test_database.sh  ansible.cfg  create_database.sh  env  export_openapi.py  export_openapi.sh  install.sh  out.sql  pyproject.toml  requirements.in  requirements.txt  requirements_test.txt  reset_database.py  reset_database.sh  reset_test_database.sh  server.py  server.sh  server_test.sh  setup.py  test.sh  test2.sh  update_requirement.sh
ansible/: README.md
ansible/playbooks/: install_supabase.yml  install_supabase_root.yml
migrations/: env.py
migrations/versions/: 06582ce20ec1_init.py  10b5a3f48f96_init.py  11e14d276834_init.py  1_tables.py  20260121_01_rls_init.py  20260121_02_rls_add_functions.py  20260121_03_rls_add_policy.py  2_functions.py  39abc9022b13_server_status2.py  3_functions.py  40bc6320aed2_init.py  49f40bdad1d2_init.py  6f1d2c9a4b7e_add_server_status_fields.py  72cbdb3ed304_functions1.py  7e66d01312d8_tables.py  b5f75525bb86_server_status.py  bdad06584a27_init.py  c1ed27a938bd_init.py  c315a1d488f9_init.py  de2259c2edb5_init.py  e0c2a1c2633d_init.py
node_agent/: config.py  myapp.py
node_agent/ansible/: ansible_playbook.py  ansible_run.py  results_collector_JSON_callback.py
node_agent/api/: api_apispec.py  api_key.py  api_swagger.py
node_agent/data/: organisation_data.py  organization_data.py  server_data.py  server_status_data.py  user_data.py
node_agent/model/: __init__.py  db.py  entrypoint.py  group.py  organisation.py  organization.py  user.py  (+5 more)
settings/: settings.yaml
tests/: README.md  conftest.py
(+84 files in other folders)
